<resources>
    <string name="ALERT_CONSUMER_KEY_LOGGED_OUT">Your account credentials have expired. Please sign out and log in again.</string>
    <string name="ALERT_INTERNET_UNREACHABLE">Please check your Internet connection and try again.</string>
    <string name="APPIRATER_CANCEL_BUTTON">No, Thanks</string>
    <string name="APPIRATER_MESSAGE">"If you enjoy using %s, would you mind taking a moment to rate it? It won't take more than a minute. Thanks for your support!"</string>
    <string name="APPIRATER_MESSAGE_TITLE">Rate %s</string>
    <string name="APPIRATER_RATE_BUTTON">Rate %s</string>
    <string name="APPIRATER_RATE_LATER">Remind me later</string>
    <string name="CHECK_INTERNET_CONNECTION">Please check your Internet connection and try again.</string>
    <string name="CPU">CPU</string>
    <string name="ENTER_VALID_CREDENTIALS">Please enter a valid Comcast ID or email and password.</string>
    <string name="FORGOT_PASSWORD">Forgot Your Password?</string>
    <string name="HAVE_HIGH_SPEED_INTERNET_QUESTION">Do you have Comcast High Speed Internet?</string>
    <string name="NEED_COMCAST_ID">Need a Comcast ID</string>
    <string name="NEED_HELP_SIGNING_IN">Need Help Signing In?</string>
    <string name="OUTPUT_PROTECTION_DIALOG_BUTTON">Quit Video</string>
    <string name="OUTPUT_PROTECTION_DIALOG_MESSAGE">"Secondary output is detected.
Please disconnect it to continue video playback."</string>
    <string name="OUTPUT_PROTECTION_DIALOG_TITLE">Output Protection Alert</string>
    <string name="OUTPUT_PROTECTION_DISCONNTECTED_TOAST">Video playback continued</string>
    <string name="OUTPUT_PROTECTION_QUIT">Please disconnect the secondary output before playing video.</string>
    <string name="PASSWORD_HINT">Password</string>
    <string name="SIGN_IN_BUTTON_TEXT">Sign In</string>
    <string name="START_VIDEO_PROBLEM">"Sorry, we've experienced some difficulty starting your video."</string>
    <string name="TV">TV</string>
    <string name="UNKNOWN_ERROR">An unknown error has occurred during this request. Please try again.</string>
    <string name="URL_FORGOT_PASSWORD">https://login.comcast.net/myaccount/reset</string>
    <string name="URL_LOOKUP_ID">https://login.comcast.net/myaccount/lookup</string>
    <string name="URL_NEEDID">https://login.comcast.net/myaccount/create-uid</string>
    <string name="URL_NEED_HELP">http://xfinity.comcast.net/learn/comcast-id</string>
    <string name="USERNAME_HINT">Your Comcast ID or Email</string>
    <string name="XIP_ERROR_CLOCK_SKEW">"Your device's date and time settings are incorrect. Click “OK” to go to the system settings screen to correct them."</string>
    <string name="account_flagged_for_abuse">Sorry, your account has been deactivated. Please call 1.888.565.4329 for assistance.</string>
    <string name="acquiring_license_error">License Acquisition Failure. Please try again.</string>
    <string name="acquiring_license_progress_message">Acquiring Video License…</string>
    <string name="actionbar_logo_description">ecksfehnity On Demand Logo</string>
    <string name="ad_resuming">Your video will resume now</string>
    <string name="ad_unknown_time_left">Your video will resume shortly</string>
    <string name="airdate">Airdate</string>
    <string name="alert_generic_error">An unknown error occurred during this request. Please try again.</string>
    <string name="alert_insufficient_heap_message">Sorry, but this device does not have the amount of memory required to run this application. Please go to the Android Market for more information.</string>
    <string name="alert_launch_another_application">This will launch another application.</string>
    <string name="alert_video_over_mobile_warning__wifi_disabled_title">Wi-Fi Disabled</string>
    <string name="alert_video_over_mobile_warning_btn_negative">No</string>
    <string name="alert_video_over_mobile_warning_btn_positive">Just Once</string>
    <string name="back">Back</string>
    <string name="content_description_movie_details">Movie Details</string>
    <string name="content_description_new_indicator">New!</string>
    <string name="eight">8</string>
    <string name="favorite">Bookmarked</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="help">Help</string>
    <string name="nine">9</string>
    <string name="one">1</string>
    <string name="overlay_parental_controls_do_not_show_again_button">Do not show this message again</string>
    <string name="overlay_parental_controls_go_to_button">Go to Parental Controls</string>
    <string name="overlay_parental_controls_primary">Giving Parents Control</string>
    <string name="overlay_parental_controls_secondary_above">"We know not every show or movie is appropriate for every age group. That's why we provide parental controls to manage the content your family watches online and on your mobile devices."</string>
    <string name="overlay_parental_controls_secondary_below">If you do not wish to set up Parental Controls now, you can do so later by going to Settings > Parental Controls.</string>
    <string name="package_name">com.xfinity.playnow</string>
    <string name="settings_about_title">About</string>
    <string name="settings_call_title">Call Us: 1-800-XFINITY</string>
    <string name="settings_chat_title">Live Chat</string>
    <string name="settings_contact_us_summary">There are a few ways to contact Comcast with any questions or issues you may be having:</string>
    <string name="settings_contact_us_title">Contact Us</string>
    <string name="settings_dark_streams">Enable Dark Streams</string>
    <string name="settings_dev_mode_title">Developer Mode</string>
    <string name="settings_faq_title">Visit FAQ</string>
    <string name="settings_help_title">Help + Support</string>
    <string name="settings_key_app_version_info">app_version_info</string>
    <string name="settings_key_call_us">settings_key_call_us</string>
    <string name="settings_key_cc_background_color">settings_key_cc_background_color</string>
    <string name="settings_key_cc_background_opacity">settings_key_cc_background_opacity</string>
    <string name="settings_key_cc_edge_color">settings_key_cc_edge_color</string>
    <string name="settings_key_cc_edge_type">settings_key_cc_edge_type</string>
    <string name="settings_key_cc_options">settings_cc_options_category</string>
    <string name="settings_key_cc_preview">settings_key_cc_preview</string>
    <string name="settings_key_cc_shortcut">settings_key_cc_shortcut</string>
    <string name="settings_key_cc_text_color">settings_key_cc_text_color</string>
    <string name="settings_key_cc_text_size">settings_key_cc_text_size</string>
    <string name="settings_key_cc_typeface">settings_key_cc_font_family</string>
    <string name="settings_key_dev_mode_on">key_dev_mode_on</string>
    <string name="settings_key_developer_adobe_version">settings_key_developer_adobe_version</string>
    <string name="settings_key_developer_configuration">settings_key_developer_configuration</string>
    <string name="settings_key_developer_disney_version">settings_key_developer_disney_version</string>
    <string name="settings_key_developer_espn_version">settings_key_developer_espn_version</string>
    <string name="settings_key_developer_options">settings_key_developer_options</string>
    <string name="settings_key_developer_viper_version">settings_key_developer_viper_version</string>
    <string name="settings_key_faq">faq</string>
    <string name="settings_key_manage_parental_control">manage_parental_controls</string>
    <string name="settings_key_playback_options">settings_key_playback_options</string>
    <string name="settings_key_show_adult">show_adult</string>
    <string name="settings_key_show_brightness">settings_key_show_brightness</string>
    <string name="settings_key_show_dark_streams">settings_key_show_dark_streams</string>
    <string name="settings_key_show_volume">settings_key_show_volume</string>
    <string name="settings_key_video_quality">settings_key_video_quality</string>
    <string name="settings_parental_control_summary">Parental Control settings are for the videos on your Android device and the XfinityTV.com website only. You can manage parental controls for your TV through your cable box.</string>
    <string name="settings_parental_control_title">Parental Controls</string>
    <string name="settings_privacy_policy_title">Privacy Policy</string>
    <string name="settings_show_adult_content_summary">Manages content on this device only.</string>
    <string name="settings_show_brightness_summary">When the brightness override is on, you can change the brightness of videos without affecting the brightness of other screens and apps</string>
    <string name="settings_show_brightness_title">Show Brightness Override</string>
    <string name="settings_show_volume_title">Show Volume Control</string>
    <string name="settings_summary_developer_configuration">Any configuration changes must restart the app to take full effect</string>
    <string name="settings_terms_and_policies_title">Terms and Policies</string>
    <string name="settings_terms_of_service_title">License Agreement</string>
    <string name="settings_title_cc_background_color">Background color</string>
    <string name="settings_title_cc_background_opacity">Background opacity</string>
    <string name="settings_title_cc_edge_color">Edge color</string>
    <string name="settings_title_cc_edge_type">Edge type</string>
    <string name="settings_title_cc_options">Closed Caption Options</string>
    <string name="settings_title_cc_shortcut">Closed Captioning Options</string>
    <string name="settings_title_cc_text_color">Text color</string>
    <string name="settings_title_cc_text_size">Text size</string>
    <string name="settings_title_cc_typeface">Font family</string>
    <string name="settings_title_developer_adobe_version">Adobe Player</string>
    <string name="settings_title_developer_disney_version">Disney Player</string>
    <string name="settings_title_developer_espn_version">ESPN Player</string>
    <string name="settings_title_developer_options">Developer Settings</string>
    <string name="settings_title_developer_viper_version">PlayerPlatform Version Number</string>
    <string name="settings_title_playback_options">Playback Options</string>
    <string name="settings_title_video_quality">Video Quality</string>
    <string name="settings_truste_title">Trust-E Security Validation</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="test_availability">[Available until: 10/30]</string>
    <string name="test_cast">[Drew, Eric, Chen, Mark]</string>
    <string name="test_description">[A tale of four friends pitted against each other in a game of death and awkward closeness.]</string>
    <string name="test_duration">[193 Minutes]</string>
    <string name="test_long_title">[This is my really really really long title]</string>
    <string name="test_release_year">[1996]</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="url_contact_live_chat">https://www.comcastsupport.com/ChatEntry/Mobile/Start.aspx</string>
    <string name="url_contact_phone_number">tel:18009346489</string>
    <string name="url_faq">http://customer.comcast.com/Pages/FAQListViewer.aspx?topic=Internet&amp;folder=9bccfc69-1749-421c-a84c-3d683a819546</string>
    <string name="url_online_parental_controls">https://customer.comcast.com/Secure/OnlineParentalControls.aspx</string>
    <string name="url_privacy_policy">http://xfinity.comcast.net/privacy</string>
    <string name="url_tos">http://xfinity.comcast.net/terms/license</string>
    <string name="url_truste_validation">http://privacy-policy.truste.com/certified-policy/mobile/app/en/comcast.com/validation.html</string>
    <string name="xfinity_speech">ecksfeenity</string>
    <string name="zero">0</string>
</resources>