<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/settings_title_developer_options" android:key="@string/settings_key_developer_options"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/settings_dev_mode_title" android:key="@string/settings_key_dev_mode_on" />
    <ListPreference android:key="@string/settings_key_developer_configuration" android:summary="@string/settings_summary_developer_configuration" />
    <CheckBoxPreference android:title="@string/settings_dark_streams" android:key="@string/settings_key_show_dark_streams" />
    <PreferenceCategory android:title="Player Version Numbers" android:key="settings_developer_player_versions" android:summary="Versions hard-coded until viper API is available">
        <Preference android:title="@string/settings_title_developer_viper_version" android:selectable="false" android:key="@string/settings_key_developer_viper_version" />
        <Preference android:title="@string/settings_title_developer_adobe_version" android:selectable="false" android:key="@string/settings_key_developer_adobe_version" />
        <Preference android:title="@string/settings_title_developer_disney_version" android:selectable="false" android:key="@string/settings_key_developer_disney_version" />
        <Preference android:title="@string/settings_title_developer_espn_version" android:selectable="false" android:key="@string/settings_key_developer_espn_version" />
    </PreferenceCategory>
</PreferenceScreen>