<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/DarkGray" android:padding="1.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <TextView android:id="@id/keypadOne" android:text="@string/one" style="@style/numeric_keypad_button" />
        <TextView android:id="@id/keypadTwo" android:text="@string/two" style="@style/numeric_keypad_button" />
        <TextView android:id="@id/keypadThree" android:text="@string/three" style="@style/numeric_keypad_button" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <TextView android:id="@id/keypadFour" android:text="@string/four" style="@style/numeric_keypad_button" />
        <TextView android:id="@id/keypadFive" android:text="@string/five" style="@style/numeric_keypad_button" />
        <TextView android:id="@id/keypadSix" android:text="@string/six" style="@style/numeric_keypad_button" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <TextView android:id="@id/keypadSeven" android:text="@string/seven" style="@style/numeric_keypad_button" />
        <TextView android:id="@id/keypadEight" android:text="@string/eight" style="@style/numeric_keypad_button" />
        <TextView android:id="@id/keypadNine" android:text="@string/nine" style="@style/numeric_keypad_button" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <FrameLayout style="@style/numeric_keypad_button" />
        <TextView android:id="@id/keypadZero" android:text="@string/zero" style="@style/numeric_keypad_button" />
        <ImageView android:id="@id/keypadBackspace" android:src="@drawable/back_arrow" android:scaleType="center" android:contentDescription="@string/back" style="@style/numeric_keypad_button" />
    </LinearLayout>
</LinearLayout>