<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/settings_about_title"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:title="@string/settings_faq_title" android:key="@string/settings_key_faq" android:widgetLayout="@layout/external_link_prompt_widget">
        <intent android:targetPackage="@string/package_name" android:action="android.intent.action.VIEW" android:targetClass="com.comcast.cim.android.view.settings.ExternalLinkPromptActivity">
            <extra android:name="title" android:value="@string/settings_faq_title" />
            <extra android:name="url" android:value="@string/url_faq" />
        </intent>
    </Preference>
    <Preference android:enabled="false" android:layout="@layout/info_preference" android:selectable="false" android:key="@string/settings_key_app_version_info" />
    <Preference android:enabled="false" android:layout="@layout/love_preference" android:selectable="false" />
</PreferenceScreen>