<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/appirater_message_area" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/APPIRATER_MESSAGE" />
    <Button android:id="@id/appirater_rate_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/APPIRATER_RATE_BUTTON" />
    <Button android:id="@id/appirater_rate_later_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/APPIRATER_RATE_LATER" />
    <Button android:id="@id/appirater_cancel_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/APPIRATER_CANCEL_BUTTON" />
</LinearLayout>