<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/parental_controls_overlay" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_gravity="center_horizontal" android:id="@id/overlay_parental_controls_primary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/overlay_parental_controls_primary" style="@style/overlay_primary" />
    <TextView android:layout_gravity="center_horizontal" android:id="@id/overlay_parental_controls_secondary_above" android:layout_width="280.0dip" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:text="@string/overlay_parental_controls_secondary_above" style="@style/overlay_secondary" />
    <Button android:layout_gravity="center_horizontal" android:id="@id/overlay_parental_controls_go_to_button" android:layout_width="270.0dip" android:layout_marginTop="24.0dip" android:text="@string/overlay_parental_controls_go_to_button" style="@style/overlay_button_text" />
    <Button android:layout_gravity="center_horizontal" android:id="@id/overlay_parental_controls_do_not_show_again_button" android:layout_width="270.0dip" android:layout_marginTop="16.0dip" android:text="@string/overlay_parental_controls_do_not_show_again_button" style="@style/overlay_button_text" />
    <TextView android:layout_gravity="center_horizontal" android:layout_width="280.0dip" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/overlay_parental_controls_secondary_below" style="@style/overlay_secondary" />
</LinearLayout>