<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper android:id="@id/flipper" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingLeft="39.0dip" android:paddingTop="74.0dip" android:paddingRight="39.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/logo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/launch_logo" android:scaleType="fitCenter" android:contentDescription="@string/xfinity_speech" />
        <EditText android:textSize="14.0dip" android:id="@id/user_id" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="27.0dip" android:hint="@string/USERNAME_HINT" android:singleLine="true" android:inputType="textEmailAddress" android:imeOptions="actionNext" style="@style/HoloEditText" />
        <EditText android:textSize="14.0dip" android:id="@id/password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="17.0dip" android:hint="@string/PASSWORD_HINT" android:inputType="textPassword" android:imeOptions="actionDone" style="@style/HoloEditText" />
        <LinearLayout android:layout_gravity="right" android:id="@id/sign_in" android:layout_width="120.0dip" android:layout_height="40.0dip" android:layout_marginTop="17.0dip" android:layout_marginRight="4.0dip" style="@style/settings_button">
            <ProgressBar android:id="@id/sign_in_progress" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8.0dip" android:indeterminate="true" style="@android:style/Widget.ProgressBar.Small.Inverse" />
            <TextView android:id="@id/sign_in_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SIGN_IN_BUTTON_TEXT" style="@style/settings_button_label" />
        </LinearLayout>
        <TextView android:textColor="@color/LightBlue" android:gravity="center_horizontal" android:id="@id/need_id" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:text="@string/NEED_COMCAST_ID" style="@style/body_link" />
        <TextView android:textColor="@color/LightBlue" android:gravity="center_horizontal" android:id="@id/forgot_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/FORGOT_PASSWORD" style="@style/body_link" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
            <ImageView android:id="@id/need_help_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/need_help_icon" android:scaleType="fitCenter" android:adjustViewBounds="true" android:contentDescription="@string/help" />
            <TextView android:textColor="@color/LightBlue" android:id="@id/need_help_signing_in" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:text="@string/NEED_HELP_SIGNING_IN" style="@style/body_link" />
        </LinearLayout>
    </LinearLayout>
</ViewFlipper>